# pluralistic-leaderboards

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
notebooks/: lmarena_demo.py  lmarena_expert5k_demo.py  reproduction.ipynb
pluralistic_leaderboards/: __init__.py  algorithms.py  data.py  evaluation.py
results/: results-expert-5k.json  results.json  run_log.md
tests/: test_algorithms.py  test_data.py
